Adapt fork implementation to agreed on interface and new fork api
